@@ -1,6 +1,7 @@
 package com.ds.sample.crud;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -8,7 +9,6 @@ import org.springframework.stereotype.Component;
 import com.ds.sample.User;
 import com.ds.sample.UserInterface;
 import com.ds.sample.UserManagementException;
-import com.ds.sample.crud.inmemory.UserDataStorage;
 
 /**
  * Implementation of UserInterface that uses in-memory storage.
@@ -29,10 +29,10 @@ public class UserService implements UserInterface {
      * Returns list of all users registered in storage.
      */
     @Override
-    public List<User> list() throws UserManagementException {
+    public List<User> list() {
         List<User> result = storage.readAll().stream()
                 .map( user -> new User( user.getId(), user.getName(), user.getEmail() ) )
-                .toList();
+                .collect(Collectors.toList());
         return result;
     }
 
@@ -56,11 +56,27 @@ public class UserService implements UserInterface {
         }
     }
 
-    public void update(User user) throws UserManagementException {
-        throw new UserManagementException("Not yet supported");
+    /**
+     * Updates information about known user.
+     */
+    public void update(int id, User user) throws UserManagementException {
+        // a developer shall not call this method with "null" argument. Thus NPE is okay for that error case.
+        if (user.getName() == null ) {
+            throw new UserManagementException("User name must be specified."); // e-mail is optional.
+        }
+        if (!storage.updateUser(id, user)) {
+            throw new UserManagementException("Unknown user " + id);
+        }
     }
 
+    /**
+     * Deletes information about known user.
+     */
     public void delete(int userId) throws UserManagementException {
-        throw new UserManagementException("Not yet supported");
+        if (storage.userExists(userId) ) {
+            storage.deleteUser(userId);
+        } else {
+            throw new UserManagementException("Unknown user " + userId);
+        }
     }
 }
